feat: kv support command executor async (#379)